--- a/wiPiBotServer/templates/index.html
+++ b/wiPiBotServer/templates/index.html
@@ -57,8 +57,12 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#launch">Launch Soon</a>
+                        <a class="page-scroll" href="#srccode">Source code</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="dashboard">Dashboard</a>
+                    </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -88,21 +92,25 @@
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
-        <div class="row">
+        <div-- class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About WiPiBot</h2>
                 <p>IoT Bot that can be controlled anywhere in the world with a browser.</p>
             </div>
+            <div style="width:300px;height:300px;margin:30px auto;">
+
+            </div>
+
         </div>
     </section>
 
-    <!-- Launch Section -->
-    <section id="launch" class="content-section text-center">
-        <div class="launch-section">
+    <!-- srccode Section -->
+    <section id="srccode" class="content-section text-center">
+        <div class="srccode-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Launch Soon</h2>
-                    <p>Stay tuned.</p>
+                    <h2>Source code</h2>
+                    <p><a href="https://github.com/victorfei/wiPiBotServer">https://github.com/victorfei/wiPiBotServer</a></p>
                 </div>
             </div>
         </div>
