added new images

--- a/wiPiBotServer/templates/dashboard/dashboard.html
+++ b/wiPiBotServer/templates/dashboard/dashboard.html
@@ -14,7 +14,7 @@
     <title>SB Admin - Bootstrap Admin Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="{% static 'bootstrap/css/sb-admin.css' %}" rel="stylesheet">
@@ -101,27 +101,27 @@
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-dashboard"></i> Control Panel</h3>
                             </div>
-                        <div style="width:300px;height:300px;margin:30px auto;">
+                        <div style="width:700px;height:350px;margin:30px auto;">
                             <table border="0" cellpadding="3" cellspacing="0">
                             <tr>
-                            <button type="button" class="btn btn-default btn-lg" aria-label="Top Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Top Arrow">
                                 <span class="glyphicon glyphicon-arrow-up" style="color:green" aria-hidden="true"></span>
                             </button> <br>
                             </tr>
                             <tr>
-                            <button type="button" class="btn btn-default btn-lg" aria-label="Left Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Left Arrow">
                                  <span class="glyphicon glyphicon-arrow-left" style="color:green" aria-hidden="true"></span>
                             </button>
 
-                             <button type="button" class="btn btn-default btn-lg" aria-label="Stop">
+                             <button type="button" class="btn btn-default btn-mv" aria-label="Stop">
                                  <span class="glyphicon glyphicon-stop" style="color:green" aria-hidden="true"></span>
                             </button>
-                            <button type="button" class="btn btn-default btn-lg" aria-label="Right Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Right Arrow">
                                  <span class="glyphicon glyphicon-arrow-right" style="color:green" aria-hidden="true"></span>
                             </button><br>
                             </tr>
                             <tr>
-                            <button type="button" class="btn btn-default btn-lg" aria-label="Bottom Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Bottom Arrow">
                                  <span class="glyphicon glyphicon-arrow-down" style="color:green" aria-hidden="true"></span>
                             </button>
                             </tr>
