--- a/wiPiBotServer/static/bootstrap/css/bootstrap.css
+++ b/wiPiBotServer/static/bootstrap/css/bootstrap.css
@@ -3484,6 +3484,7 @@ fieldset[disabled] .btn-link:focus {
   color: #777;
   text-decoration: none;
 }
+
 .btn-lg,
 .btn-group-lg > .btn {
   padding: 10px 16px;
@@ -3491,6 +3492,14 @@ fieldset[disabled] .btn-link:focus {
   line-height: 1.3333333;
   border-radius: 6px;
 }
+.btn-mv,
+.btn-group-mv > .btn {
+  padding: 30px 36px;
+  font-size: 38px;
+  line-height: 1.3333333;
+  border-radius: 36px;
+}
+
 .btn-sm,
 .btn-group-sm > .btn {
   padding: 5px 10px;
@@ -3777,6 +3786,11 @@ tbody.collapse.in {
   padding-right: 12px;
   padding-left: 12px;
 }
+}
+.btn-group > .btn-mv + .dropdown-toggle {
+  padding-right: 12px;
+  padding-left: 12px;
+}
 .btn-group.open .dropdown-toggle {
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
@@ -3793,6 +3807,14 @@ tbody.collapse.in {
   border-bottom-width: 0;
 }
 .dropup .btn-lg .caret {
+  border-width: 0 5px 5px;
+}
+
+.btn-mv .caret {
+  border-width: 5px 5px 0;
+  border-bottom-width: 0;
+}
+.dropup .btn-mv .caret {
   border-width: 0 5px 5px;
 }
 .btn-group-vertical > .btn,
