--- a/wiPiBotServer/templates/dashboard/dashboard.html
+++ b/wiPiBotServer/templates/dashboard/dashboard.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
+    <title>WiPiBot | Dashboard</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
@@ -58,7 +58,7 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="/">ABOUT</a>
+                            <a class="page-scroll" href="/">HOME</a>
                         </li>
                     </ul>
                 </div>
@@ -67,10 +67,13 @@
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav side-nav">
                         <li class="active">
-                            <a href=""><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                            <a href="#video"><i class="glyphicon glyphicon-facetime-video"></i>  Video</a>
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
+                            <a href="#control"><i class="fa fa-fw fa-dashboard"></i> Control</a>
+                        </li>
+                        <li>
+                            <a href="#charts"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
                         </li>
                     </ul>
                 </div>
@@ -78,13 +81,26 @@
         </nav>
             <div id="page-wrapper">
                 <div class="container-fluid">
-                    <!-- Page Heading -->
+                    <!-- Video -->
                     <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             Dashboard <small>Control & Statistics Overview</small>
                         </h1>
-                        <ol class="breadcrumb">
+                        <ol class="breadcrumb"  id="video">
+                            <li class="active">
+                                <i class="glyphicon glyphicon-facetime-video"></i> Video
+                            </li>
+                        </ol>
+                        <div align="center"> embedd video here
+                        </div><br>
+                    </div>
+                    </div>
+
+                    <!-- Panel -->
+                    <div class="row">
+                    <div class="col-lg-12">
+                        <ol class="breadcrumb" id='control'>
                             <li class="active">
                                 <i class="fa fa-dashboard"></i> Control
                             </li>
@@ -94,37 +110,40 @@
 
                     <!-- /.row -->
                     <div class="row">
-
                     </div>
                     <div class="col-lg-8 col-md-6" align="center">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-dashboard"></i> Control Panel</h3>
                             </div>
-                        <div style="width:700px;height:350px;margin:30px auto;">
+                        <div style="width:700px;height:350px;margin:30px auto;">       
                             <table border="0" cellpadding="3" cellspacing="0">
                             <tr>
-                            <button type="button" class="btn btn-default btn-mv" aria-label="Top Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Top Arrow" onclick="fwd();">
                                 <span class="glyphicon glyphicon-arrow-up" style="color:green" aria-hidden="true"></span>
-                            </button> <br>
-                            </tr>
+                            </button> 
+                            </tr><br>
                             <tr>
-                            <button type="button" class="btn btn-default btn-mv" aria-label="Left Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Left Arrow" onclick="left();">
                                  <span class="glyphicon glyphicon-arrow-left" style="color:green" aria-hidden="true"></span>
                             </button>
-
-                             <button type="button" class="btn btn-default btn-mv" aria-label="Stop">
-                                 <span class="glyphicon glyphicon-stop" style="color:green" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-default btn-mv" aria-label="Right Arrow">
-                                 <span class="glyphicon glyphicon-arrow-right" style="color:green" aria-hidden="true"></span>
-                            </button><br>
                             </tr>
-                            <tr>
-                            <button type="button" class="btn btn-default btn-mv" aria-label="Bottom Arrow">
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Bottom Arrow" onclick="bwd();">
                                  <span class="glyphicon glyphicon-arrow-down" style="color:green" aria-hidden="true"></span>
                             </button>
-                            </tr>
+                            <tr>
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Right Arrow" onclick="right();">
+                                 <span class="glyphicon glyphicon-arrow-right" style="color:green" aria-hidden="true"></span>
+                            </button>
+                            </tr><br>
+
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Stop" onclick="stop();">
+                                 <span class="glyphicon glyphicon-stop" style="color:red" aria-hidden="true"></span>
+                            </button>
+                             <button type="button" class="btn btn-default btn-mv" aria-label="Led" onclick="led();">
+                                 <span class="glyphicon glyphicon-warning-sign" style="color:red" aria-hidden="true"></span>
+                            </button>
+
                             </table>
                         </div>
                     </div>
@@ -133,41 +152,41 @@
                     <div class="col-lg-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> Tasks Panel</h3>
+                            <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> History</h3>
                         </div>
                         <div class="panel-body">
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
                                     <span class="badge">just now</span>
-                                    <i class="fa fa-fw fa-calendar"></i> Calendar updated
+                                    <i class="glyphicon glyphicon-arrow-right"></i> Turned right
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">4 minutes ago</span>
-                                    <i class="fa fa-fw fa-comment"></i> Commented on a post
+                                    <i class="glyphicon glyphicon-arrow-up"></i> Drove forward
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">23 minutes ago</span>
-                                    <i class="fa fa-fw fa-truck"></i> Order 392 shipped
+                                    <i class="glyphicon glyphicon-stop"></i> Stopped
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">46 minutes ago</span>
-                                    <i class="fa fa-fw fa-money"></i> Invoice 653 has been paid
+                                    <i class="glyphicon glyphicon-warning-sign"></i> Lights on/off
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">1 hour ago</span>
-                                    <i class="fa fa-fw fa-user"></i> A new user has been added
+                                    <i class="glyphicon glyphicon-warning-sign"></i> Lights on/off
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">2 hours ago</span>
-                                    <i class="fa fa-fw fa-check"></i> Completed task: "pick up dry cleaning"
+                                    <i class="glyphicon glyphicon-arrow-up"></i> Drove forward
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">yesterday</span>
-                                    <i class="fa fa-fw fa-globe"></i> Saved the world
+                                    <i class="glyphicon glyphicon-arrow-down"></i> Drove backward
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">two days ago</span>
-                                    <i class="fa fa-fw fa-check"></i> Completed task: "fix error on sales page"
+                                    <i class="glyphicon glyphicon-arrow-left"></i> Turned left
                                 </a>
                             </div>
                             <div class="text-right">
@@ -182,7 +201,7 @@
                     <!-- /.row -->
                     <div class="row">
                     <div class="col-lg-12">
-                        <div class="panel panel-default">
+                        <div class="panel panel-default" id="charts"> 
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Area Chart</h3>
                             </div>
@@ -202,7 +221,6 @@
 
     </div>
     <!-- /#wrapper -->
-
     <!-- jQuery -->
     <script src="{% static 'bootstrap/js/jquery.js' %}"></script>
 
@@ -213,6 +231,8 @@
     <script src="{% static 'bootstrap/js/plugins/morris/raphael.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/plugins/morris/morris.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/plugins/morris/morris-data.js' %}"></script>
+    <script src="{% static 'bootstrap/js/custom.js' %}"></script>
+
 
 </body>
 
