--- a/wiPiBotServer/templates/index.html
+++ b/wiPiBotServer/templates/index.html
@@ -76,11 +76,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>Your personal robot platform can be accessed anywhere. </h1>
+                        <h1>Your personal robot platform accessible from anywhere</h1>
                         <p class="intro-text">
-                            Bring the cool remotely controlled military bots in movies to your home.
-                            <br> The Internet of Things. Remotely control your home bot.<br>
-                            With 4 on board sensor. Monitor your enviornment live!</p>
+                            It's finally here! We have brought the Internet of Things, remotely controlled bot to your life.
+                         </p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -89,15 +88,25 @@
             </div>
         </div>
     </header>
-
+      <!--Bring the cool remotely controlled military bots in movies to your home.
+                            <br> The Internet of Things. Remotely control your home bot.<br>
+                            With 4 on board sensor. Monitor your enviornment live-->
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
-        <div-- class="row">
+        <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About WiPiBot</h2>
-                <p>IoT Bot that can be controlled anywhere in the world with a browser.</p>
+                <p>In the age of the Internet of Things, we believe that you deserve: </p>
+                 <p>A cool remotely controlled bot like the ones in movies. </p>
+                <p>That can be controlled from anywhere in the world with a browser.</p>
+                <p>With four on board sensors and full range motions. </p>
+                <button type="button" class="btn btn-default btn-lg">
+                    <a class="navbar-brand page-scroll" href="/dashboard">
+                     Monitor your environment live now!
+                    </a>
+                </button>
             </div>
-            <div style="width:300px;height:300px;margin:30px auto;">
+            <div style="width:300px;height:200px;margin:30px auto;">
 
             </div>
 
@@ -110,8 +119,11 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Source code</h2>
-                    <p><a href="https://github.com/victorfei/wiPiBotServer">https://github.com/victorfei/wiPiBotServer</a></p>
+                    <p><a href="https://github.com/victorfei/wiPiBotServer">https://github.com/victorfei/wiPiBot</a></p>
                 </div>
+            </div>
+             <div style="width:300px;height:30px;margin:10px auto;">
+
             </div>
         </div>
     </section>
