--- a/wiPiBotServer/templates/dashboard/dashboard.html
+++ b/wiPiBotServer/templates/dashboard/dashboard.html
@@ -93,6 +93,9 @@
                             </li>
                         </ol>
                         <div align="center"> embedd video here
+                        <iframe width="420" height="315"
+							src="128.253.17.119:8000">
+						</iframe>
                         </div><br>
                     </div>
                     </div>
