--- a/wiPiBotServer/templates/dashboard/dashboard.html
+++ b/wiPiBotServer/templates/dashboard/dashboard.html
@@ -94,7 +94,7 @@
                         </ol>
                         <div align="center"> embedd video here
                         <iframe width="420" height="315"
-							src="128.253.17.119:8000">
+							src="tcp/h264://128.253.17.119:8000">
 						</iframe>
                         </div><br>
                     </div>
