--- a/wiPiBotServer/templates/dashboard/dashboard.html
+++ b/wiPiBotServer/templates/dashboard/dashboard.html
@@ -82,24 +82,6 @@
             <div id="page-wrapper">
                 <div class="container-fluid">
                     <!-- Video -->
-                    <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">
-                            Dashboard <small>Control & Statistics Overview</small>
-                        </h1>
-                        <ol class="breadcrumb"  id="video">
-                            <li class="active">
-                                <i class="glyphicon glyphicon-facetime-video"></i> Video
-                            </li>
-                        </ol>
-                        <div align="center"> embedd video here
-                        <iframe width="420" height="315"
-							src="tcp/h264://128.253.17.119:8000">
-						</iframe>
-                        </div><br>
-                    </div>
-                    </div>
-
                     <!-- Panel -->
                     <div class="row">
                     <div class="col-lg-12">
@@ -131,73 +113,55 @@
                                  <span class="glyphicon glyphicon-arrow-left" style="color:green" aria-hidden="true"></span>
                             </button>
                             </tr>
-                            <button type="button" class="btn btn-default btn-mv" aria-label="Bottom Arrow" onclick="bwd();">
-                                 <span class="glyphicon glyphicon-arrow-down" style="color:green" aria-hidden="true"></span>
+                             <button type="button" class="btn btn-default btn-mv" aria-label="Stop" onclick="stop();">
+                                 <span class="glyphicon glyphicon-stop" style="color:red" aria-hidden="true"></span>
                             </button>
                             <tr>
                             <button type="button" class="btn btn-default btn-mv" aria-label="Right Arrow" onclick="right();">
                                  <span class="glyphicon glyphicon-arrow-right" style="color:green" aria-hidden="true"></span>
                             </button>
                             </tr><br>
-
-                            <button type="button" class="btn btn-default btn-mv" aria-label="Stop" onclick="stop();">
-                                 <span class="glyphicon glyphicon-stop" style="color:red" aria-hidden="true"></span>
+                            <button type="button" class="btn btn-default btn-mv" aria-label="Bottom Arrow" onclick="bwd();">
+                                 <span class="glyphicon glyphicon-arrow-down" style="color:green" aria-hidden="true"></span>
                             </button>
-                             <button type="button" class="btn btn-default btn-mv" aria-label="Led" onclick="led();">
-                                 <span class="glyphicon glyphicon-warning-sign" style="color:red" aria-hidden="true"></span>
-                            </button>
-
                             </table>
                         </div>
                     </div>
                     </div>
 
-                    <div class="col-lg-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> History</h3>
-                        </div>
-                        <div class="panel-body">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">just now</span>
-                                    <i class="glyphicon glyphicon-arrow-right"></i> Turned right
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">4 minutes ago</span>
-                                    <i class="glyphicon glyphicon-arrow-up"></i> Drove forward
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">23 minutes ago</span>
-                                    <i class="glyphicon glyphicon-stop"></i> Stopped
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">46 minutes ago</span>
-                                    <i class="glyphicon glyphicon-warning-sign"></i> Lights on/off
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">1 hour ago</span>
-                                    <i class="glyphicon glyphicon-warning-sign"></i> Lights on/off
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">2 hours ago</span>
-                                    <i class="glyphicon glyphicon-arrow-up"></i> Drove forward
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">yesterday</span>
-                                    <i class="glyphicon glyphicon-arrow-down"></i> Drove backward
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">two days ago</span>
-                                    <i class="glyphicon glyphicon-arrow-left"></i> Turned left
-                                </a>
-                            </div>
-                            <div class="text-right">
-                                <a href="#">View All Activity <i class="fa fa-arrow-circle-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
 
+                    <div class="col-lg-8" align="center">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-dashboard"></i> Accessories</h3>
+                            </div>
+                            <div style="width:700px;height:350px;margin:30px auto;">       
+                                <table border="0" cellpadding="3" cellspacing="0">
+                                    <tr>
+                                      <button type="button" class="btn btn-default btn-mv" aria-label="Top Arrow" onclick="speed_up();">
+                                        <span class="glyphicon glyphicon-arrow-up" style="color:green" aria-hidden="true"></span>
+                                    </button> 
+                                      <button type="button" class="btn btn-default btn-mv" aria-label="Speed down" onclick="speed_down();">
+                                        <span class="glyphicon glyphicon-arrow-down" style="color:green" aria-hidden="true"></span>
+                                    </button> 
+                                    </tr><br>
+                                    <tr>
+                                     <button type="button" class="btn btn-default btn-mv" aria-label="Led" onclick="led();">
+                                         <span class="glyphicon glyphicon-warning-sign" style="color:red" aria-hidden="true"></span>
+                                    </button>
+                                    <button type="button" class="btn btn-default btn-mv" aria-label="Record" onclick="record();">
+                                         <span class="glyphicon glyphicon-record" style="color:red" aria-hidden="true"></span>
+                                    </button>
+                                    <button type="button" class="btn btn-default btn-mv" aria-label="Stop record" onclick="stop_record();">
+                                         <span class="glyphicon glyphicon-stop" style="color:red" aria-hidden="true"></span>
+                                    </button>
+                                    <button type="button" class="btn btn-default btn-mv" aria-label="Clear" onclick="clear();">
+                                         <span class="glyphicon glyphicon-stop" style="color:blue" aria-hidden="true"></span>
+                                    </button>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
                     </div>
 
 
