--- a/wiPiBotServer/templates/dashboard/dashboard.html
+++ b/wiPiBotServer/templates/dashboard/dashboard.html
@@ -87,12 +87,12 @@
                     <div class="col-lg-12">
                         <ol class="breadcrumb" id='control'>
                             <li class="active">
-                                <i class="fa fa-dashboard"></i> Control
+                                <i class="fa fa-dashboard"></i> Command Center
                             </li>
                         </ol>
                     </div>
                     </div>
-
+            
                     <!-- /.row -->
                     <div class="row">
                     </div>
@@ -139,10 +139,10 @@
                                 <table border="0" cellpadding="3" cellspacing="0">
                                     <tr>
                                       <button type="button" class="btn btn-default btn-mv" aria-label="Top Arrow" onclick="speed_up();">
-                                        <span class="glyphicon glyphicon-arrow-up" style="color:green" aria-hidden="true"></span>
+                                        <span class="glyphicon glyphicon-chevron-up" style="color:green" aria-hidden="true"></span>
                                     </button> 
                                       <button type="button" class="btn btn-default btn-mv" aria-label="Speed down" onclick="speed_down();">
-                                        <span class="glyphicon glyphicon-arrow-down" style="color:green" aria-hidden="true"></span>
+                                        <span class="glyphicon glyphicon-chevron-down" style="color:green" aria-hidden="true"></span>
                                     </button> 
                                     </tr><br>
                                     <tr>
@@ -150,13 +150,10 @@
                                          <span class="glyphicon glyphicon-warning-sign" style="color:red" aria-hidden="true"></span>
                                     </button>
                                     <button type="button" class="btn btn-default btn-mv" aria-label="Record" onclick="record();">
-                                         <span class="glyphicon glyphicon-record" style="color:red" aria-hidden="true"></span>
+                                         <span class="glyphicon glyphicon-facetime-video" style="color:blue" aria-hidden="true"></span>
                                     </button>
                                     <button type="button" class="btn btn-default btn-mv" aria-label="Stop record" onclick="stop_record();">
-                                         <span class="glyphicon glyphicon-stop" style="color:red" aria-hidden="true"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default btn-mv" aria-label="Clear" onclick="clear();">
-                                         <span class="glyphicon glyphicon-stop" style="color:blue" aria-hidden="true"></span>
+                                         <span class="glyphicon glyphicon-pause" style="color:blue" aria-hidden="true"></span>
                                     </button>
                                     </tr>
                                 </table>
